--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "nodemon ./bin/www"
   },
   "dependencies": {
+    "@prisma/client": "^4.12.0",
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "cors": "^2.8.5",
@@ -16,6 +17,7 @@
     "jsonfile": "^6.1.0",
     "mysql": "^2.18.1",
     "node-datetime": "^2.1.2",
+    "prisma": "^4.12.0",
     "socket.io": "^4.5.2"
   }
 }
