--- a/package.json
+++ b/package.json
@@ -22,13 +22,15 @@
     "homepage": "https://github.com/nandobfer/nandoburgos.api#readme",
     "dependencies": {
         "@prisma/client": "^4.15.0",
+        "@types/ws": "^8.5.5",
         "axios": "^1.4.0",
         "body-parser": "^1.20.2",
         "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
         "dotenv": "^16.1.1",
         "express": "^4.18.2",
-        "https": "^1.0.0"
+        "https": "^1.0.0",
+        "ws": "^8.13.0"
     },
     "devDependencies": {
         "@types/cookie-parser": "^1.4.3",
