--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "test": "echo \"Error: no test specified\" && exit 1",
         "build": "npx tsc",
         "start": "node dist/index.js",
-        "dev": "concurrently \\\"npx tsc --watch\\\" \\\"nodemon -q dist/index.js\\\""
+        "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\""
     },
     "repository": {
         "type": "git",
@@ -30,7 +30,7 @@
         "dotenv": "^16.1.1",
         "express": "^4.18.2",
         "https": "^1.0.0",
-        "ws": "^8.13.0"
+        "socket.io": "^4.7.1"
     },
     "devDependencies": {
         "@types/cookie-parser": "^1.4.3",
