--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "build": "npx tsc",
         "start": "node dist/index.js",
         "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\"",
-        "prismix": "npx prismix && prisma format"
+        "prismix": "npx prismix && prisma format && npx prisma generate"
     },
     "repository": {
         "type": "git",
@@ -22,6 +22,7 @@
     },
     "homepage": "https://github.com/nandobfer/nandoburgos.api#readme",
     "dependencies": {
+        "@caldwell619/bulk-webp-converter": "^0.0.5",
         "@prisma/client": "^4.15.0",
         "@types/ws": "^8.5.5",
         "axios": "^1.4.0",
